Adding link to ‘hello world’ page

--- a/ps-01/index.html
+++ b/ps-01/index.html
@@ -1,7 +1,8 @@
 <HTML>
   <BODY>
-
-    HELLO WORLD!!!
+      <P> Brilee Weaver </p>
+      <p> 2016-09-20 </p>
+      <p> Click <a href:"/Users/BPW/Desktop/Northeastern/Semester 1/Sketching w: Code/2016-SWC/ps-01/a.html">here</a> to visit 'Hello World' </p>
 
   </BODY>
 </HTML>
