--- a/ps-01/index.html
+++ b/ps-01/index.html
@@ -3,7 +3,8 @@
   <body>
       <P> Brilee Weaver </p>
       <p> 2016-09-20 </p>
-      <p> Click <a href:"https://brilee-weaver.github.io/2016-SWC/ps-01/a.html"> here </a> to visit 'Hello World' </p>
+      <p>ps-01</p>
+      <p> Click <a href="https://brilee-weaver.github.io/2016-SWC/ps-01/a.html">here</a> to visit 'Hello World' </p>
 
   </body>
 </html>
