--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -6,7 +6,10 @@
   </head>
 
   <body>
-      <div>
+      <div style="center">
+        <p> Brilee Weaver </p>
+        <p> 2016-27-09 </p>
+        <p> PS-02 </p>
       </div>
 
 
