--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -6,10 +6,15 @@
   </head>
 
   <body>
-      <div style="center">
+      <div>
         <p class="greeting"> Brilee Weaver </p>
         <p class="greeting"> 2016-27-09 </p>
         <p class="greeting"> PS-02 </p>
+
+      </div>
+
+      <div >
+
       </div>
 
 
