--- a/ps-02/profile.html
+++ b/ps-02/profile.html
@@ -12,9 +12,11 @@
 
         <img src="https://pbs.twimg.com/profile_images/770288321574629378/YMvN_IIf.jpg"/>
 
+        <div>
+
         <p1>Brilee is a Media Innovation student at Northeastern University.</p>
 
-
+        </div>
 
   </body>
 
