--- a/ps-02/profile.html
+++ b/ps-02/profile.html
@@ -10,8 +10,11 @@
         <h1>Brilee Weaver</h1>
         <h2>Graduate Student</h2>
 
+        <div>
         <img src="https://pbs.twimg.com/profile_images/770288321574629378/YMvN_IIf.jpg"/>
+        </div>
 
+        
         <div>
 
         <p1>Brilee is a Media Innovation student at Northeastern University.</p>
