--- a/ps-02/profile.html
+++ b/ps-02/profile.html
@@ -17,7 +17,7 @@
 
 
 
-        <p1>Brilee is a Media Innovation student at Northeastern University.</p>
+        <p>Brilee is a Media Innovation student at Northeastern University.</p>
 
         
 
