--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -14,24 +14,26 @@
       </div>
 
       <div id="upperleft">
-        Profile
+        <p class="title"> Profile </p>
 
       </div>
 
 
       <div id="bottomleft">
 
-        Squares
+        <p class="title"> Squares </p>
 
     </div>
 
     <div id="upperright">
-    Loud
+
+    <p class="title"> Loud </p>
+
   </div>
 
 
   <div id="bottomright">
-    Tag Explainer
+    <p class="title"> Tag Explainer </p>
 
   </div>
 
