--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -14,7 +14,7 @@
       </div>
 
       <div id="upperleft">
-        <p class="title"> Profile </p>
+        <p class="title"> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/profile.html"> Profile </a> </p>
 
       </div>
 
