--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -14,26 +14,26 @@
       </div>
 
       <div id="upperleft">
-        <p class="title"> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/profile.html"> Profile </a> </p>
+        <p class="title"> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/profile.html"> <strong>Profile <strong></a> </p>
 
       </div>
 
 
       <div id="bottomleft">
 
-        <p class="title"> Squares </p>
+        <p class="title"> <strong> Squares </strong> </p>
 
     </div>
 
     <div id="upperright">
 
-    <p class="title"> Loud </p>
+    <p class="title"> <strong> Loud </strong></p>
 
   </div>
 
 
   <div id="bottomright">
-    <p class="title"> Tag Explainer </p>
+    <p class="title"> <strong> Tag </strong> </p>
 
   </div>
 
