--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -7,7 +7,9 @@
 
   <body>
       <div>
-        <p class="greeting"> Brilee Weaver </p>
+        <p class="greeting">Brilee Weaver</p>
+        <p class="greeting">2016-27-09</p>
+        <p class="greeting">PS-02</p>
 
       </div>
 
