--- a/ps-02/profile.html
+++ b/ps-02/profile.html
@@ -7,7 +7,7 @@
 
   <body>
 
-        <h1> <a href="https://brilee-weaver.gihub.io/2016-SWC/ps-02/index.html">Brilee Weaver</h1>
+        <h1> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/index.html">Brilee Weaver</a></h1>
         <h2>Graduate Student</h2>
 
 
