--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -21,19 +21,19 @@
 
       <div id="bottomleft">
 
-        <p class="title"> <strong> Squares </strong> </p>
+        <p class="title"> <strong> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/squares.html">Squares </a></strong> </p>
 
     </div>
 
     <div id="upperright">
 
-    <p class="title"> <strong> Loud </strong></p>
+    <p class="title"> <strong> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/loud.html">Loud </a></strong></p>
 
   </div>
 
 
   <div id="bottomright">
-    <p class="title"> <strong> Tag </strong> </p>
+    <p class="title"> <strong> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/tag.html">Tag </a></strong> </p>
 
   </div>
 
