--- a/ps-02/profile.html
+++ b/ps-02/profile.html
@@ -8,7 +8,8 @@
   <body>
 
         <h1> <a href="https://brilee-weaver.github.io/2016-SWC/ps-02/index.html">Brilee Weaver</a></h1>
-        <h2>Graduate Student</h2>
+        <h2>Editor</h2>
+        <h3> <a href="http://boston.homicidewatch.org">Homicide Watch Boston </a></h3>
 
 
         <img src="https://pbs.twimg.com/profile_images/770288321574629378/YMvN_IIf.jpg"/>
@@ -18,7 +19,7 @@
 
 
         <p>Brilee is a Media Innovation student at Northeastern University.</p>
-
+        <p>Follow her on <a href="https://twitter.com/brilee_weaver">Twitter</a> for her latest reports. </p>
 
 
   </body>
