--- a/ps-02/squares.html
+++ b/ps-02/squares.html
@@ -7,13 +7,13 @@
 
   <body>
 
-  <div>
+  <div id="small">
   </div>
 
-  <div>
+  <div id="medium">
   <div>
 
-  <div>
+  <div id="large">
   </div>
 
 
