--- a/ps-02/loud.html
+++ b/ps-02/loud.html
@@ -6,19 +6,19 @@
   </head>
   <body>
 
-      <div>
+      <div id="L">
+        <strong> L </strong>
+      </div>
+
+      <div id="O">
 
       </div>
 
-      <div>
+      <div id="U">
 
       </div>
 
-      <div>
-
-      </div>
-
-      <div>
+      <div id="D">
 
       </div>
 
