--- a/ps-02/loud.html
+++ b/ps-02/loud.html
@@ -17,7 +17,7 @@
       <div id="U">
         <strong>U </strong>
       </div>
-
+      <strong> <em> D </em></strong>
       <div id="D">
 
       </div>
