background color on list

--- a/ps-02/tag.html
+++ b/ps-02/tag.html
@@ -11,18 +11,22 @@
     <h2> &lt ol &gt </h2>
 
     <p> Sketching ordered lists with HTML helps you organize content on your webpage.</p>
-    <p id="start"> Let's get started! </p>
+    <p class="start"> Let's get started! </p>
+
+    <div>
 
       <ol> <strong> How to use the ordered list tag, &lt ol &gt : </strong> </ol>
         <li> Begin by entering the tag in your editor browser. </li>
         <li> As you would with a paragraph tag, &lt p &gt, enter a name for your ordered list. </li>
         <li> Next, indent and type the list item tag, &lt li &gt. This will be the first item on your list. </li>
         <li> Remember to use a closing tag before moving on to your next list item (i.e. &lt li &gt). </li>
-        
+        <li> Continue adding list items, each finished off with a closing tag. </li>
+        <li> When you have entered all of your list items, complete your ordered list with its closing tag, &lt /ol &gt. </li>
 
       </ol>
+    </div>
 
-      <p> Congrats! You've just completed your ordered list. </p>
+      <p class="start"> Congrats! You've just completed your ordered list. </p>
 
   </body>
 </html>
