--- a/ps-02/profile.html
+++ b/ps-02/profile.html
@@ -18,7 +18,7 @@
 
 
 
-        <p>Brilee is a Media Innovation student at Northeastern University.</p>
+        <p>Brilee is a <a href="http://www.northeastern.edu/camd/journalism/academic-programs/ma-journalism-2/">Media Innovation</a> student at <a href="http://www.northeastern.edu">Northeastern University</a>.</p>
         <p>Follow her on <a href="https://twitter.com/brilee_weaver">Twitter</a> for her latest reports. </p>
 
 
