--- a/ps-03/index.html
+++ b/ps-03/index.html
@@ -8,12 +8,13 @@
 
     <body>
       <div>
-      <p> Brilee Weaver </p>
-      <p> 2016-10-04 </p>
-      <p> PS-03 </p>
+      <p id="first"> Brilee Weaver </p>
+      <p id="first"> 2016-10-04 </p>
+      <p id="first"> PS-03 </p>
     </div>
 
     <div id="link">
-    <a href="brilee-weaver.github.io/2016-SWC/ps-03/squares.html"> Squares </a>
+      <a href="brilee-weaver.github.io/2016-SWC/ps-03/squares.html"> <p id="second"> Squares </p></a>
     </div>
+
     </body>
