--- a/ps-03/index.html
+++ b/ps-03/index.html
@@ -7,7 +7,7 @@
 
 
     <body>
-      <div>
+      <div id="set">
       <p id="first"> Brilee Weaver </p>
       <p id="first"> 2016-10-04 </p>
       <p id="first"> PS-03 </p>
