--- a/ps-03/index.html
+++ b/ps-03/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="link">
-      <a href="brilee-weaver.github.io/2016-SWC/ps-03/squares.html"> <p id="second"> Squares </p></a>
+      <a href="https://brilee-weaver.github.io/2016-SWC/ps-03/squares.html"> <p id="second"> Squares </p></a>
     </div>
 
     </body>
