--- a/ps-03/squares.html
+++ b/ps-03/squares.html
@@ -5,7 +5,7 @@
 
     <link type="text/css" rel="stylesheet" href="squares.css">
 
-      <title>canvas starter document</title>
+      <title>Squares</title>
 
   </head>
 
