--- a/ps-03/index.html
+++ b/ps-03/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link type="text/css" rel="stylesheet" href="index.css">
-      <title>Problem Set Three</title>
+        <link type="text/css" rel="stylesheet" href="index.css">
+        <title> Problem Set Three </title>
     </head>
 
-
     <body>
-      <div id="set">
-      <p id="first"> Brilee Weaver </p>
-      <p id="first"> 2016-10-04 </p>
-      <p id="first"> PS-03 </p>
-    </div>
 
-    <div id="link">
-      <a href="https://brilee-weaver.github.io/2016-SWC/ps-03/squares.html"> <p id="second"> Squares </p></a>
-    </div>
+        <div class="name">
+          <p>Brilee Weaver</p>
+          <p>2016-10-04</p>
+          <p>PS-03</p>
+        </div>
+
+        <div class="link">
+          <p> Squares</p>
+        </div>
 
     </body>
+
+  </html>
