--- a/ps-03/index.html
+++ b/ps-03/index.html
@@ -8,13 +8,13 @@
     <body>
 
         <div class="name">
-          <p>Brilee Weaver</p>
-          <p>2016-10-04</p>
-          <p>PS-03</p>
+          <p><strong>Brilee Weaver</strong></p>
+          <p><strong>2016-10-04</strong></p>
+          <p><strong>PS-03</strong></p>
         </div>
 
         <div class="link">
-          <p> Squares</p>
+          <a href="https://brilee-weaver.github.io/2016-SWC/ps-03/squares.html"><p> Squares</p></a>
         </div>
 
     </body>
