--- a/ps-03/squares.html
+++ b/ps-03/squares.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <canvas id="canvas" width="200" height="200"></canvas>
   </body>
 
   <script type="text/javascript">
@@ -25,6 +25,22 @@
 
     drawingPad.fillStyle = "hsla(0,40%,80%,1)";
     drawingPad.fillRect(70, 70, 20, 20);
+
+    drawingPad.fillStyle = "hsla(0,30%,90%,1)";
+    drawingPad.fillRect(90, 90, 10, 10);
+
+    drawingPad.fillStyle = "hsla(0,10%,100%,1)";
+    drawingPad.fillRect(100, 100, 5, 5);
+
+    drawingPad.fillStyle = "hsla(0,30%,90%,1)";
+    drawingPad.fillRect(105, 105, 10, 10);
+
+    drawingPad.fillStyle = "hsla(0,40%,80%,1)";
+    drawingPad.fillRect(115, 115, 20, 20);
+
+    drawingPad.fillStyle = "hsla(0,10%,80%,1)";
+    drawingPad.fillRect(135,135, 70, 70);
+
 
   </script>
 
