final index page

--- a/ps-04/index.html
+++ b/ps-04/index.html
@@ -2,14 +2,20 @@
   <html>
       <head>
         <link type="text/css" rel="stylesheet" href="index.css">
+        <style>
+        @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+        </style>
+        <style>
+        @import 'https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300';
+        </style>
         <title>Problem Set Four</title>
       </head>
 
       <body>
 
       <div class="name">
-          <p>Brilee Weaver</p>
-          <p>PS-04 // 2016.10.11</p>
+          <p><strong>Brilee Weaver</strong></p>
+          <p><em>PS-04 // 2016.10.11</em></p>
       </div>
 
       <div class="solutions">
@@ -18,15 +24,10 @@
         <a href="http://brilee-weaver.github.io/2016-SWC/ps-04/connected.html"><p>Connected Lines</p></a>
       </div>
 
+      <div class="border">
+        <p><em>Sketching with Code</em></p>
+      <div>
 
-
-
-
-
-
-
-
-
-
+      </body>
 
   </html>
