--- a/ps-04/grid.html
+++ b/ps-04/grid.html
@@ -10,6 +10,8 @@
 
     <body>
 
+      <script src="grid.js"></script>
+
       <div class="heading">
           <p> Broken Grid </p>
           <p>PS-04 // 2016.10.11</p>
