connected set up

--- a/ps-04/connected.html
+++ b/ps-04/connected.html
@@ -4,20 +4,20 @@
     <style>
     @import 'https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah|Open+Sans+Condensed:300';
     </style>
-      <link type="text/css" rel="stylesheet" href="grid.css">
-      <title>Broken Grid</title>
+      <link type="text/css" rel="stylesheet" href="connected.css">
+      <title>Connected Lines</title>
     </head>
 
     <body>
 
-      <script src="grid.js"></script>
+      <script src="connected.js"></script>
 
       <div class="heading">
-          <p> Broken Grid </p>
+          <p> Connected Lines </p>
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-      <div class="grid">
+      <div class="connected">
 
       </div>
 
