--- a/ps-04/grid.html
+++ b/ps-04/grid.html
@@ -4,22 +4,21 @@
     <style>
     @import 'https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah|Open+Sans+Condensed:300';
     </style>
+      <meta charset="UTF-8">
       <link type="text/css" rel="stylesheet" href="grid.css">
       <title>Broken Grid</title>
     </head>
 
     <body>
 
-      <script src="grid.js"></script>
-
       <div class="heading">
           <p> Broken Grid </p>
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-      <div class="grid">
+      <script src="grid.js"></script>
+      <canvas id="myGrid" width="500" height="500" style="border:1px dashed #000000;"></canvas>
 
-      </div>
 
     </body>
     </html>
