--- a/ps-04/grid.html
+++ b/ps-04/grid.html
@@ -5,7 +5,6 @@
     @import 'https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah|Open+Sans+Condensed:300';
     </style>
       <meta charset="UTF-8">
-      <script src="grid.js"></script>
       <link type="text/css" rel="stylesheet" href="grid.css">
       <title>Broken Grid</title>
     </head>
@@ -17,9 +16,10 @@
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-      
-      <canvas id="myGrid" width="500" height="500" style="border:1px dashed #000000;"></canvas>
 
+      <canvas id="myGrid" width="500" height="500" style="border:1px dashed #000000;"></canvas>
+      <script type="text/javascript" src="grid.js"></script>
+    
 
     </body>
     </html>
