--- a/ps-04/lines.html
+++ b/ps-04/lines.html
@@ -10,16 +10,13 @@
 
     <body>
 
-      <script src="lines.js"></script>
-
       <div class="heading">
           <p> Non-Intersecting Lines </p>
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-      <div class="lines">
-
-      </div>
+      <canvas id="lines" width="800" height="500" style="border:1px solid #000000;"></canvas>
+      <script type="text/javascript" src="lines.js"></script>
 
     </body>
     </html>
