--- a/ps-04/connected.html
+++ b/ps-04/connected.html
@@ -4,22 +4,31 @@
     <style>
     @import 'https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah|Open+Sans+Condensed:300';
     </style>
+    <style>
+    @import 'https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300';
+    </style>
       <link type="text/css" rel="stylesheet" href="connected.css">
       <title>Connected Lines</title>
     </head>
 
     <body>
 
-      <script src="connected.js"></script>
-
       <div class="heading">
           <p> Connected Lines </p>
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-      <div class="connected">
+      <div class="decor">
+          <p> Scroll...</p>
 
-      </div>
+      <div class="decorII">
+          <p> Scroll...</p>
+
+      <div class="decorIII">
+          <p> Scroll...</p>
+
+      <canvas id="connected" width="150" height="450" style="border:1px dashed #000000;"></canvas>
+      <script type="text/javascript" src="connected.js"></script>
 
     </body>
     </html>
