adding back button

--- a/ps-04/grid.html
+++ b/ps-04/grid.html
@@ -19,7 +19,10 @@
 
       <canvas id="myGrid" width="500" height="500" style="border:1px dashed #000000;"></canvas>
       <script type="text/javascript" src="grid.js"></script>
-    
+
+      <div class="back">
+          <p>Return to <a href="http://brilee-weaver.github.io/2016-SWC/ps-04/index.html">Problem Set Four</a></p>
+
 
     </body>
     </html>
