--- a/ps-04/lines.html
+++ b/ps-04/lines.html
@@ -18,5 +18,9 @@
       <canvas id="lines" width="800" height="500" style="border:1px solid #000000;"></canvas>
       <script type="text/javascript" src="lines.js"></script>
 
+      <div class="back">
+          <p>Return to <a href="http://brilee-weaver.github.io/2016-SWC/ps-04/index.html">Problem Set Four</a></p>
+
+
     </body>
     </html>
