--- a/ps-04/connected.html
+++ b/ps-04/connected.html
@@ -16,6 +16,7 @@
       <div class="heading">
           <p> Connected Lines </p>
           <p>PS-04 // 2016.10.11</p>
+          <p>Return to <a href="http://brilee-weaver.github.io/2016-SWC/ps-04/index.html">Problem Set Four</a></p>
       </div>
 
       <div class="decor">
@@ -29,6 +30,7 @@
 
       <canvas id="connected" width="150" height="450" style="border:1px dashed #000000;"></canvas>
       <script type="text/javascript" src="connected.js"></script>
+
 
     </body>
     </html>
