--- a/ps-04/grid.html
+++ b/ps-04/grid.html
@@ -17,7 +17,7 @@
       </div>
 
 
-      <canvas id="myGrid" width="500" height="500" style="border:1px dashed #000000;"></canvas>
+      <canvas id="myGrid" width="500" height="500" style="border:1px solid #000000;"></canvas>
       <script type="text/javascript" src="grid.js"></script>
 
       <div class="back">
