insert broken grid

--- a/ps-04/grid.html
+++ b/ps-04/grid.html
@@ -16,13 +16,14 @@
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-
-      <canvas id="myGrid" width="500" height="500" style="border:1px solid #000000;"></canvas>
-      <script type="text/javascript" src="grid.js"></script>
-
       <div class="back">
           <p>Return to <a href="http://brilee-weaver.github.io/2016-SWC/ps-04/index.html">Problem Set Four</a></p>
 
+        </div>
+
+
+      <canvas id="myGrid" width="500" height="500" style="border:1px solid #000000;"></canvas>
 
     </body>
+        <script type="text/javascript" src="grid.js"></script>
     </html>
