--- a/ps-04/lines.html
+++ b/ps-04/lines.html
@@ -15,12 +15,115 @@
           <p>PS-04 // 2016.10.11</p>
       </div>
 
-      <canvas id="lines" width="800" height="500" style="border:1px solid #000000;"></canvas>
-      <script type="text/javascript" src="lines.js"></script>
-
       <div class="back">
           <p>Return to <a href="http://brilee-weaver.github.io/2016-SWC/ps-04/index.html">Problem Set Four</a></p>
 
+        </div>
+
+      <canvas id="lines" width="800" height="500" style="border:1px solid #000000;">
+          <div id="one">
+          </div>
+
+          <div id="two">
+          </div>
+
+          <div id="three">
+          </div>
+
+          <div id="four">
+          </div>
+
+          <div id="five">
+          </div>
+
+          <div id="six">
+          </div>
+
+          <div id="seven">
+          </div>
+
+          <div id="eight">
+          </div>
+
+          <div id="nine">
+          </div>
+
+          <div id="ten">
+          </div>
+
+          <div id="eleven">
+          </div>
+
+          <div id="twelve">
+          </div>
+
+          <div id="thirteen">
+          </div>
+
+          <div id="fourteen">
+          </div>
+
+          <div id="fifteen">
+          </div>
+
+          <div id="sixteen">
+          </div>
+
+          <div id="seventeen">
+          </div>
+
+          <div id="eighteen">
+          </div>
+
+          <div id="nineteen">
+          </div>
+
+          <div id="twenty">
+          </div>
+
+          <div id="twenty-one">
+          </div>
+
+          <div id="twenty-two">
+          </div>
+
+          <div id="twenty-three">
+          </div>
+
+          <div id="twenty-four">
+          </div>
+
+          <div id="twenty-five">
+          </div>
+
+          <div id="twenty-six">
+          </div>
+
+          <div id="twenty-seven">
+          </div>
+
+          <div id="twenty-eight">
+          </div>
+
+          <div id="twenty-nine">
+          </div>
+
+          <div id="thirty">
+          </div>
+
+          <div id="thirty-one">
+          </div>
+
+          <div id="thirty-two">
+          </div>
+          
+          <div id="thirty-three">
+          </div>
+
+      </canvas>
 
     </body>
+
+    <script type="text/javascript" src="lines.js"></script>
+
     </html>
