--- a/ps-05/lines.html
+++ b/ps-05/lines.html
@@ -4,13 +4,13 @@
       <meta charset="UTF-8">
       <link type="text/css" rel="stylesheet" href="lines.css">
       <style> @import 'https://fonts.googleapis.com/css?family=Indie+Flower|Trirong';</style>
-      <title>Non-Intersecting Lines</title>
+      <title>Line Composition</title>
     </head>
 
     <body>
 
       <div>
-        <p id="lines">Non-Intersecting Lines</p>
+        <p id="lines">Line Composition</p>
 
         <p id="ps"><a href="index.html">Problem Set Five</a></p>
 
