--- a/ps-05/index.html
+++ b/ps-05/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="link">
-          <p><a href="lines.html">Non-Intersecting Lines</a></p>
+          <p><a href="lines.html">Line Composition</a></p>
           <p><a href="chart.html">Eye Examination Chart</a></p>
           <p><a href="https://brilee-weaver.github.io/2016-SWC/ps-04/index.html">Revisit Problem Set Four</a></p>
         </div>
