--- a/ps-05/chart.html
+++ b/ps-05/chart.html
@@ -14,7 +14,7 @@
 
         <p id="ps"><a href="index.html">Problem Set Five</a></p>
 
-        <canvas id="eyeChart" width="500" height="500" style="border:1px dashed #000000;"></canvas>
+        <canvas id="eyeChart" width="500" height="500"></canvas>
 
       </div>
 
