--- a/ps-05/index.html
+++ b/ps-05/index.html
@@ -22,7 +22,7 @@
         <div class="link">
           <p><a href="lines.html">Line Composition</a></p>
           <p><a href="chart.html">Eye Examination Chart</a></p>
-          <p><a href=https://brilee-weaver.github.io/2016-SWC/ps-04/index.html>Problem Set Four</a></p>
+          <p><a href=https://brilee-weaver.github.io/2016-SWC/ps-04/lines.html>Non-Intersecting Lines</a></p>
         </div>
 
     </body>
