--- a/ps-06/monster.html
+++ b/ps-06/monster.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="monster.css">
     <link href="https://fonts.googleapis.com/css?family=Cookie|Mountains+of+Christmas|Pacifico|Quicksand|Unica+One" rel="stylesheet">
     <title> Cadavre Exquis </title>
@@ -13,7 +14,7 @@
 
     <div id="wolf">
         <p>Werewolf</p>
-          <p><a href="index.html">Problem Set Six</a></p>
+        <p><a href="index.html">Problem Set Six</a></p>
     </div>
 
 
