--- a/ps-06/monster.html
+++ b/ps-06/monster.html
@@ -21,6 +21,6 @@
 
   </body>
 
-  <script type="text/javascript" src="monster.js"></script>
+  <script type="text/javascript" src="corpse.js"></script>
 
 </html>
