--- a/ps-06/monster.html
+++ b/ps-06/monster.html
@@ -17,7 +17,7 @@
     </div>
 
 
-    <canvas id="myMonster" width="400" height="720"></canvas>
+    <canvas id="corpse" width="400" height="720"></canvas>
 
   </body>
 
