--- a/ps-07/index.html
+++ b/ps-07/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <link type="text/css" rel="stylesheet" href="index.css">
-      <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Amaranth|Luckiest+Guy" rel="stylesheet">
       <title> Slot Machine </title>
   </head>
 
@@ -17,7 +17,7 @@
   <h1>Hit the jackpot and collect your winnings</h1>
 
   <div id="machine">
-    <img src="Slot.jpeg"/>
+    <img href="Slot.jpeg"/>
   </div>
 
   <p id="space">Press the space bar to redeem your prize!</p>
