change size of photo

--- a/ps-07/index.html
+++ b/ps-07/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta charset="UTF-8">
       <link type="text/css" rel="stylesheet" href="index.css">
       <link href="https://fonts.googleapis.com/css?family=Amaranth|Luckiest+Guy" rel="stylesheet">
       <title> Slot Machine </title>
@@ -16,11 +17,10 @@
 
   <h1>Hit the jackpot and collect your winnings</h1>
 
-  <div id="machine">
-    <img href="Slot.jpeg"/>
-  </div>
+  <canvas id="slot" width="500" height="600"></canvas>
 
   <p id="space">Press the space bar to redeem your prize!</p>
 
   </body>
+  <script type="text/javascript" src="index.js"></script>
 </html>
