changes to logo size

--- a/Phone-Case /contact.html
+++ b/Phone-Case /contact.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
   <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="home.css">
+    <link type="text/css" rel="stylesheet" href="contact.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-    <title>Hop Phone Case</title>
+    <title>Hop Phone Case - Contact</title>
   </head>
 
   <body>
       <div id="top">
-        <img src="logo.png"/> 
         <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
       </div>
 
