add div for photo

--- a/Phone-Case /home.html
+++ b/Phone-Case /home.html
@@ -8,13 +8,15 @@
 
   <body>
       <div id="top">
-        <img src="logo.png"/> 
+        <img src="logo.png"/>
         <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
       </div>
 
+      <div id="product">
+      </div>
 
-
-
+      <div>
+      </div>
 
   </body>
   <html>
