--- a/Phone-Case /about.html
+++ b/Phone-Case /about.html
@@ -8,9 +8,9 @@
 
   <body>
       <div id="top">
+        <img src="logo.png"/>
         <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
       </div>
-
 
 
 
