--- a/Phone-Case /shop.html
+++ b/Phone-Case /shop.html
@@ -5,14 +5,12 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <title>Hop Phone Case - Shop</title>
   </head>
-
+  
   <body>
       <div id="top">
+        <img src="logo.png"/>
         <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
       </div>
-
-
-
 
 
   </body>
