change text positioning

--- a/Phone-Case /home.html
+++ b/Phone-Case /home.html
@@ -13,9 +13,13 @@
       </div>
 
       <div id="product">
+        <p id="goodbye">Say 'goodbye' to the plug
+        <p id="hello">and 'hello' to hopping!
       </div>
 
-      <div>
+      <div id="track">
+        <p id="">
+        <p id="">
       </div>
 
   </body>
