--- a/Phone-Case /home.html
+++ b/Phone-Case /home.html
@@ -3,18 +3,20 @@
   <head>
     <link type="text/css" rel="stylesheet" href="home.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <title>Hop Phone Case</title>
   </head>
 
   <body>
       <div id="top">
-        <img src="logo.png"/>
+        <img id= "logo" src="logo.png"/>
+        <p id="brand">hop</p>
         <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
       </div>
 
       <div id="product">
         <p id="goodbye">Say 'goodbye' to the plug
-        <p id="hello">and 'hello' to hopping!
+        <p id="hello">and 'hello' to <strong><font color=#6B8E23>hopping</font></strong>!
       </div>
 
       <div id="track">
