--- a/Phone-Case /home.html
+++ b/Phone-Case /home.html
@@ -3,14 +3,14 @@
   <head>
     <link type="text/css" rel="stylesheet" href="home.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
     <title>Hop Phone Case</title>
   </head>
 
   <body>
       <div id="top">
         <img id= "logo" src="logo.png"/>
-        <p id="brand">hop</p>
+        <p id="brand">Hop</p>
         <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
       </div>
 
