changes to top border

--- a/Phone-Case /home.html
+++ b/Phone-Case /home.html
@@ -11,7 +11,7 @@
       <div id="top">
         <img id= "logo" src="logo.png"/>
         <p id="brand">Hop</p>
-        <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
+        <p id="menu"> <a href="home.html">Home</a> / <a href="about.html">About</a> / <a href="shop.html">Shop</a> / <a href="contact.html">Contact</a></p>
       </div>
 
       <div id="product">
@@ -20,8 +20,8 @@
       </div>
 
       <div id="track">
-        <p id="">
-        <p id="">
+        <p id="send">You've sent us your old phone case? <strong><font color=#6B8E23>See where it's traveled!</font></strong></p>
+        <p id="enter">Enter your <a href="track.html"><strong>tracking ID</strong></a></p>
       </div>
 
   </body>
