--- a/Phone-Case /contact.html
+++ b/Phone-Case /contact.html
@@ -3,13 +3,15 @@
   <head>
     <link type="text/css" rel="stylesheet" href="contact.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
     <title>Hop Phone Case - Contact</title>
   </head>
 
   <body>
       <div id="top">
-        <img src="logo.png"/>
-        <p id="menu"> <a href="home.html">Home</a> <a href="about.html">About</a> <a href="shop.html">Shop</a> <a href="contact.html">Contact</a></p>
+        <img id= "logo" src="logo.png"/>
+        <p id="brand">Hop</p>
+        <p id="menu"> <a href="home.html">Home</a> / <a href="about.html">About</a> / <a href="shop.html">Shop</a> / <a href="contact.html">Contact</a></p>
       </div>
 
 
