finish shop tab

--- a/Phone-Case /about.html
+++ b/Phone-Case /about.html
@@ -15,7 +15,21 @@
         <p id="menu"> <a href="home.html">Home</a> / <a href="about.html">About</a> / <a href="shop.html">Shop</a> / <a href="contact.html">Contact</a></p>
       </div>
 
+      <div id="product">
+        <p class="title"> The Hop Case <p>
+      </div>
 
+      <div id="solar">
+        <p class="title"> Our Solar Technology </p>
+      </div>
+
+      <div id="plastic">
+        <p class="title"> Our Plastic </p>
+      </div>
+
+      <div id="track">
+        <p id="promise"> Our Promise</p>
+      </div>
 
   </body>
   <html>
