--- a/Phone-Case /shop.html
+++ b/Phone-Case /shop.html
@@ -14,6 +14,26 @@
         <p id="menu"> <a href="home.html">Home</a> / <a href="about.html">About</a> / <a href="shop.html">Shop</a> / <a href="contact.html">Contact</a></p>
       </div>
 
+      <div id="seven">
+      </div>
+
+      <div id="sevenex">
+      <p class="phone">iPhone 7</p>
+      </div>
+
+      <div id="six">
+      </div>
+
+      <div id="sixex">
+      <p class="phone">iPhone 6</p>
+      </div>
+
+      <div id="samsung">
+      </div>
+
+      <div id="samsungex">
+      <p class="phone">Samsung Galaxy</p>
+      </div>
 
   </body>
   <html>
