contact page setup

--- a/Phone-Case /contact.html
+++ b/Phone-Case /contact.html
@@ -14,6 +14,12 @@
         <p id="menu"> <a href="home.html">Home</a> / <a href="about.html">About</a> / <a href="shop.html">Shop</a> / <a href="contact.html">Contact</a></p>
       </div>
 
+      <div id="contact">
+        <p>Email:</p>
+        <p>Phone:</p>
+        <p>Fax: </p>
+      </div>
+
 
 
 
