--- a/ps-08/open.html
+++ b/ps-08/open.html
@@ -11,6 +11,7 @@
 
       <div id="name">
       <h1> brilee weaver </h1>
+      <p><a href="index.html">problem set eight</a></p>
       </div>
 
       <canvas id="sign" width="600" height="400"></canvas>
