save all canvas

--- a/ps-09/snow.html
+++ b/ps-09/snow.html
@@ -8,8 +8,13 @@
 
     <body>
 
+      <div id="head">
       <h1>brilee weaver</h1>
+      <p>{ <a href="index.html">home</a> }</p>
+      </div>
 
+      <canvas id="snow" width="400" height="400"></canvas>
 
     </body>
+    <script type="text/javascript" src="snow.js"></script>
     </html>
