--- a/ps-09/walker.html
+++ b/ps-09/walker.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+        <meta charset="UTF-8">
         <link type="text/css" rel="stylesheet" href="walker.css"/>
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Shrikhand" rel="stylesheet"/>
       <title>Random Walker</title>
@@ -8,8 +9,13 @@
 
     <body>
 
+      <div id="head">
       <h1>brilee weaver</h1>
+      <p>{ <a href="index.html">home</a> }</p>
+      </div>
 
+      <canvas id="walker" width="400" height="400"></canvas>
 
     </body>
+    <script type="text/javascript" src="walker.js"></script>
     </html>
