all code before javascript

--- a/ps-09/index.html
+++ b/ps-09/index.html
@@ -7,7 +7,11 @@
     <head>
 
     <body>
+
+      <div id="head">
       <h1>brilee weaver</h1>
+      <p>problem set nine</p>
+      </div>
 
       <div id="solutions">
         <p>{ <a href="walker.html">random walker</a> }</p>
