--- a/ps-09/snow.html
+++ b/ps-09/snow.html
@@ -10,7 +10,7 @@
 
       <div id="head">
       <h1>brilee weaver</h1>
-      <p>{ <a href="index.html">home</a> }</p>
+      <p>{ <a href="index.html">problem set nine</a> }</p>
       </div>
 
       <canvas id="snow" width="400" height="400"></canvas>
