--- a/ps-10/graph.html
+++ b/ps-10/graph.html
@@ -10,11 +10,20 @@
 
       <div id="head">
       <h1>brilee weaver</h1>
-      <p>{ <a href="https://brileeweaver.github.io/2016-SWC/ps-10/index.html">problem set ten</a> }</p>
+      <p>{ <a href="index.html">problem set ten</a> }</p>
       </div>
 
-      <svg id="graph" width="500" height="500"/>
+      <svg id="svg" width="500" height="500"/>
       </svg>
 
+      <div id="source">
+      <p> { ref: Roper Center / <a href="http://ropercenter.cornell.edu/polls/us-elections/popular-vote/">Popular Votes 1940-2012</a>' } </p>
+      </div>
+
+
+      <img id="voted" src="voted.png"/>
+      <p id="caption"> { credit: jamelah e. / <a href="https://www.flickr.com/photos/jamelah/3002492619/in/photolist-5zjys8-rLrhm-pWbpPR-drn9Z1-5ziiYp-drknFn-dsLpVx-8QbfMe-drdjvY-5zhCn8-dsLq9v-5zRATs-8Qg9K1-dqSXNY-rMKE3-8Qd611-drsvci-5zqyZy-5ztREG-draGe2-osy1XL-5GCXrC-5sCrKb-66i8NX-aatyet-tELBV-dri83r-dkUqxE-4JxxbD-aaty8v-9iowG9-bUy8fM-dETFgj-5y2MGN-8QwgxX-5zoe5z-5zp9Eo-drcZFx-8QhBCk-8Qkf71-5zog3c-8QznE3-6z4hH4-drgGSN-5yUF4H-8QmfQ9-hiKvwf-4qmJgj-5zrT7n-4rMTJd">flickr</a> } </p>
+
     </body>
+    <script src="graph.js" charset="utf-8" defer></script>
   <html>
