--- a/ps-10/graph.html
+++ b/ps-10/graph.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <meta charset="UTF-8">
       <link type="text/css" rel="stylesheet" href="graph.css"/>
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Shrikhand" rel="stylesheet"/>
       <title>Simple Graph</title>
@@ -10,7 +11,7 @@
 
       <div id="head">
       <h1>brilee weaver</h1>
-      <p>{ <a href="index.html">problem set ten</a> }</p>
+      <p>{ <a href="https://brileeweaver.github.io/2016-SWC/ps-10/index.html">problem set ten</a> }</p>
       </div>
 
       <svg id="svg" width="500" height="500"/>
