--- a/ps-11/graph.html
+++ b/ps-11/graph.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <meta charset="UTF-8">
+      <script src="https://d3js.org/d3.v4.min.js"></script>
       <link type="text/css" rel="stylesheet" href="graph.css"/>
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Shrikhand" rel="stylesheet"/>
       <title>Revisit Graph</title>
@@ -14,7 +15,7 @@
       <p>{ <a href="https://brileeweaver.github.io/2016-SWC/ps-11/index.html">problem set eleven</a> }</p>
       </div>
 
-      <svg id="svg" width="500" height="500"/>
+      <svg id="svg" width="600" height="600"/>
       </svg>
 
     </body>
