--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -8,7 +8,7 @@
     <body>
 
     <div id="header">
-    <img id="democracy" src="democracy.png"/>
+    <img id="booth" src="booth.png"/>
     <p id="voted"> You voted, but </p>
     <p id="count"> does it count? </p>
     </div>
