complete header, begin introduction

--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link type="text/stylesheet" rel="stylesheet" href="index.css"/>
+      <link type="text/css" rel="stylesheet" href="index.css"/>
       <title> You Voted, But Does It Count?</title>
     </head>
 
@@ -10,5 +10,9 @@
     <div id="header">
     <img id="booth" src="booth.png"/>
     <p id="voted"> You voted, but </p>
-    <p id="count"> does it count? </p>
+    <p id="count"> does it <em>count<em>? </p>
+    </div>
+
+    <div id="intro">
+      
     </div>
