--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -2,17 +2,19 @@
   <html>
     <head>
       <link type="text/css" rel="stylesheet" href="index.css"/>
-      <title> You Voted, But Does It Count?</title>
+      <title> You Voted; Did It Count?</title>
     </head>
 
     <body>
 
     <div id="header">
     <img id="booth" src="booth.png"/>
-    <p id="voted"> You voted, but </p>
-    <p id="count"> does it <em>count<em>? </p>
+    <p id="voted"> <strong>You voted;<strong> </p>
+    <p id="count"> <strong>did it count?<strong> </p>
+    <p id="byline"> By Brilee Weaver</p>
     </div>
 
     <div id="intro">
-      
+    <p id="heading" style: "red"> Under the Big Tent</p>
+    <p> As the popular vote counts from each state were reported, into the early morning hours of Nov. 9, 2016, proud voters watched as maps of the United States on their television and computer screens evolved into the usual electoral patchwork of red and blue. 
     </div>
