--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -10,13 +10,13 @@
     <div id="header">
     <img id="booth" src="booth.png"/>
     <p id="voted"> <strong>You voted;</strong> </p>
-    <p id="count"> <strong>did it count?</strong> </p>
+    <p id="count"> <strong>did it <em>count</em>?</strong> </p>
     <p id="byline"> By Brilee Weaver</p>
     <p id="photo"><em>Photo by Shannon Broderick</em></p>
     </div>
 
     <div id="intro">
     <p id="heading" style: "red"> <strong>Under the Big Tent</strong></p>
-    <p> As the popular vote counts from each state were reported, into the early morning hours of Nov. 9, 2016, voters and non-voters alike watched as maps on their television and computer screens evolved into the expected electoral patchwork of red and blue. And, come 3:00 a.m., candidate Donald Trump turned president-elect- perhaps the most controversial in modern history.</p>
-    <p> In the days and months following the victory, as vote counts continued to climb and the gap between Trump and opponent Hillary Clinton's total popular vote counts widened, one
+    <p> As the popular vote counts from each state were reported, into the early morning hours of Nov. 9, 2016, voters and non-voters alike watched as maps on their television and computer screens evolved into the expected electoral patchwork of red and blue. And, come 3:00 a.m., candidate Donald Trump became president-elect Trump, in what has been called the most controversial election in modern history.</p>
+    <p> But in the days and weeks following the Republican victory, as vote counts continued to climb and the gap between Trump and opponent Hillary Clinton's total popular vote counts widened, questions and frustrations about the significance of the electoral college bubbled over in public spaces both in person and online.</p>
     </div>
