--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <meta charset="UTF-8">
       <link type="text/css" rel="stylesheet" href="index.css"/>
       <title> You Voted; Did It Count?</title>
     </head>
@@ -12,11 +13,40 @@
     <p id="voted"> <strong>You voted;</strong> </p>
     <p id="count"> <strong>did it <em>count</em>?</strong> </p>
     <p id="byline"> By Brilee Weaver</p>
-    <p id="photo"><em>Photo by Shannon Broderick</em></p>
+    <p id="photo"><em>Photo Credit: Amherst Wire</em></p>
     </div>
 
     <div id="intro">
-    <p id="heading" style: "red"> <strong>Under the Big Tent</strong></p>
+    <p class="heading" style: "red"> <strong>Under the Big Tent</strong></p>
     <p> As the popular vote counts from each state were reported, into the early morning hours of Nov. 9, 2016, voters and non-voters alike watched as maps on their television and computer screens evolved into the expected electoral patchwork of red and blue. And, come 3:00 a.m., candidate Donald Trump became president-elect Trump, in what has been called the most controversial election in modern history.</p>
     <p> But in the days and weeks following the Republican victory, as vote counts continued to climb and the gap between Trump and opponent Hillary Clinton's total popular vote counts widened, questions and frustrations about the significance of the electoral college bubbled over in public spaces both in person and online.</p>
+    <p> What, in fact, is the electoral college? And, more importantly, how has its influence impacted our present and our future?</p>
+    <p> Step on into the Big Top; we're juggling two vote counts and walking the tight rope that connects two very different Americas.</p>
+    <p> <em>How should we choose our ringleader?</em></p>
     </div>
+
+    <div>
+    <img src="democracy.png"/>
+    <p id="sign"><em>Photo Credit: Amherst Wire</em></p>
+    </div>
+
+    <div id="bar">
+    <svg id="compare" width="500" height="500"></svg>
+    </div>
+
+    <div id="explain">
+    <p> here ill explain the bar graph balh blah bldfa;drg nsdjngl sdjnfg djfgskjn adfgdfg dfgsdfgsdg sdfgsdfgsdfg sdfgsfgsdfg sdfgsdfgsdfg sdfgsdfgsdfg sdfg sdfg sdfg sdfg sdfg sdfg sdfg sdfg sdfg sdfg</p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    </div>
+
+    <div id="time">
+    <p class="heading" style: "red"> <strong>Turn Back the Clock</strong></p>
+    <p> this portion is about past elections sfsdfsdfsdfsdfsdf sfsdfsdfs sdf sdf sdf sdf sdf sf sdf sdf sdf sdfsdfsdfs sdfsdfs dfsdfsdf sdfsfsdf sdf sdfsdf sdf sdfsdfsdfsdf sdfsdfsdfsdf sfsdfsdfsdf</p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    </div>
+
+
+  </body>
