--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <meta charset="UTF-8">
+      <script src="graph.js" charset="utf-8" defer></script>
       <link type="text/css" rel="stylesheet" href="index.css"/>
       <title> You Voted; Did It Count?</title>
     </head>
@@ -21,7 +22,7 @@
     <p> As the popular vote counts from each state were reported, into the early morning hours of Nov. 9, 2016, voters and non-voters alike watched as maps on their television and computer screens evolved into the expected electoral patchwork of red and blue. And, come 3:00 a.m., candidate Donald Trump became president-elect Trump, in what has been called the most controversial election in modern history.</p>
     <p> But in the days and weeks following the Republican victory, as vote counts continued to climb and the gap between Trump and opponent Hillary Clinton's total popular vote counts widened, questions and frustrations about the significance of the electoral college bubbled over in public spaces both in person and online.</p>
     <p> What, in fact, is the electoral college? And, more importantly, how has its influence impacted our present and our future?</p>
-    <p> Step on into the Big Top; we're juggling two vote counts and walking the tight rope that connects two very different Americas.</p>
+    <p> Step into the Big Top; we're juggling two vote counts and walking the tight rope that connects two very different Americas.</p>
     <p> <em>How should we choose our ringleader?</em></p>
     </div>
 
@@ -48,5 +49,13 @@
     <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
     </div>
 
+    <div id="graph">
+    <svg id="size" width="700" height="700">
+    </svg>
+    </div>
 
   </body>
+
+  <script src="index.js" charset="utf-8" defer></script>
+
+  </html>
