add third photo

--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -54,6 +54,20 @@
     </svg>
     </div>
 
+    <div id="hillary">
+    <img src="clinton.png"/>
+    <p id="woman"><em>Photo Credit: Amherst Wire</em></p>
+    </div>
+
+    <div id="ahead">
+    <p class="heading" style: "red"> <strong>Looking Ahead</strong></p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
+    </div>
+
+    <div>
+    </div>
+
   </body>
 
   <script src="index.js" charset="utf-8" defer></script>
