--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="graph">
-    <svg id="size" width="700" height="700">
+    <svg id="svg" width="700" height="700">
     </svg>
     </div>
 
