change font throughout body

--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <script src="graph.js" charset="utf-8" defer></script>
       <link type="text/css" rel="stylesheet" href="index.css"/>
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
       <title> You Voted; Did It Count?</title>
     </head>
 
@@ -12,7 +13,7 @@
     <div id="header">
     <img id="booth" src="booth.png"/>
     <p id="voted"> <strong>You voted;</strong> </p>
-    <p id="count"> <strong>did it <em>count</em>?</strong> </p>
+    <p id="count"> <strong>did it <em>count</em> ?</strong> </p>
     <p id="byline"> By Brilee Weaver</p>
     <p id="photo"><em>Photo Credit: Amherst Wire</em></p>
     </div>
