--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div id="ahead">
-    <p class="heading" style: "red"> <strong>Looking Ahead</strong></p>
+    <p class="heading" style= "red"> <strong>Looking Ahead</strong></p>
     <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
     <p> dfghdfgh dfghdfhd dfghdfghdfgh dfghdfghd gfh dfgh g  fgh ghf ghfgh sg sfh dfgh  sdf fdghdf ghdj gfhjf ghjf jfghj fghjf ghjf d sdh ty yuk  fdgh  djfg hjf ghjf ghjf sd  f fgh fgh fgh sf d gdf g</p>
     </div>
@@ -76,7 +76,9 @@
     <p class="click"><em>Click picture to read more from Rolling Stone</em></p>
    </div>
 
-
+   <div id="bottom">
+    <p style= "red">Sketching Code | Final Project | Brilee Weaver</p>
+   </div>
 
   </body>
 
