--- a/ps-12/index.html
+++ b/ps-12/index.html
@@ -2,11 +2,12 @@
   <html>
     <head>
       <meta charset="UTF-8">
-      <script src="graph.js" charset="utf-8" defer></script>
+      <script src="index.js" charset="utf-8" defer></script>
       <link type="text/css" rel="stylesheet" href="index.css"/>
       <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
       <title> You Voted; Did It Count?</title>
     </head>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <body>
 
